--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="gn.css">
         <body>
             <div class="a1">
-                <img src="C:\Users\krish\OneDrive\Pictures\kgf1.jpg" width="270px" height="250px">
+                <img src="kgf1.jpg" width="270px" height="250px">
             </div>
             <div class="a2"> 
             <h1>K KRISHNASWAMY</h1>
